# Learn-meson_cibuildwheel

./: README.md  check.py  meson.build  pyproject.toml  siphash24.pyx.in  test.py
.github/workflows/: lint.yml  tests.yml  wheels.yml
